# map-editor

./: README.md  pyproject.toml
docs/: main-game-map-layer-integration-spec.md
layers/ashland/: layer1.py  layer2.py  layer3.py
layers/dungeon/: layer1.py  layer2.py  layer3.py  layer4.py  layer5.py
src/map_builder/: __init__.py  app.py  blocking_grid.py  brush.py  layer_data.py  layer_file.py  main.py  map_grid.py  tileset.py  tileset_discovery.py  tools.py
