[project]
name = "map-builder"
version = "0.1.0"
description = "Simple internal 2D tile map builder for exporting coordinate grids."
readme = "README.md"
authors = [
    { name = "joelf", email = "joelfriedrich@gmx.de" }
]
requires-python = ">=3.12"
dependencies = [
    "pygame>=2.6.1",
]

[project.scripts]
map-builder = "map_builder.main:main"

[build-system]
requires = ["uv_build>=0.10.8,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.15.5",
]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["tilesets/*.py", "layers/*.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
